# cutefish-dock

./: CMakeLists.txt  qml.qrc
qml/: AppItem.qml  DockItem.qml  main.qml
src/: activity.cpp  applicationmodel.cpp  applicationmodel.h  dockadaptor.cpp  dockadaptor.h  fakewindow.cpp  iconthemeimageprovider.cpp  iconthemeimageprovider.h  kwinbridge.cpp  kwinbridge.h  main.cpp  mainwindow.cpp  systemappmonitor.cpp  xwindowinterface.cpp  xwindowinterface.h
